<resources>
    <string name="app_name">Mentor Meet</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="signUpTitle">Register</string>
    <string name="username">Username</string>
    <string name="name">First and Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="reenter_password">Reenter password</string>
    <string name="are_you_a_mentor">Are you a mentor?</string>
    <string name="sign_me_up">Sign me up!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="click_here_to_sign_in_if_you_already_have_an_account">Click here to sign in if you already have an account.</string>
    <string name="toggle_this_if_you_are_a_mentor">Toggle this if you are a mentor.</string>
    <string name="your_feed">Your Feed</string>
    <string name="events">Events</string>
    <string name="mentor_page">Mentor Page</string>
    <string name="your_profile">Your Profile</string>
    <string name="it_seems_like_this_is_your_first_time_using_mentor_meet_welcome_please_answer_the_following_questions">It seems like this is your first time using Mentor Meet. Welcome! Please answer the following questions.</string>
    <string name="first_and_last_name">First and Last Name</string>
    <string name="please_choose_5_interests">Please choose *5* interests.</string>
    <string name="done">Done!</string>
    <string name="zipcode">Zipcode</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string-array name="interests_search">

    </string-array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="zipcode_api_code">UVx2FNuKrJnwNIOaP9hJWflXebY5zVAuQ8xwV1gmLDTymHIbQ0UNggLurJA1Ebvv</string>
</resources>
