<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/signUpTitle"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="40sp"
        android:id="@+id/signUpText"
        android:textColorHighlight="#ffffff"
        android:text="@string/signUpTitle" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:ems="10"
        android:id="@+id/usernameEdit" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/first_name"
        android:ems="10"
        android:id="@+id/firstNameEdit"
        android:layout_weight="1"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/last_name"
        android:ems="10"
        android:id="@+id/lastNameEdit"
        android:layout_weight="1"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textWebEmailAddress"
        android:hint="@string/email"
        android:ems="10"
        android:id="@+id/emailEdit"
        android:layout_weight="1"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/password"
        android:id="@+id/password"
        android:layout_weight="1"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/reenter_password"
        android:ems="10"
        android:id="@+id/secondPassword"
        android:layout_weight="1"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/are_you_a_mentor"
        android:id="@+id/switch1"
        android:layout_weight="1"
        android:ems="10"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/sign_me_up"
        android:textSize="35sp"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:background="@color/colorLightPrimary"
        android:layout_weight="1"
        android:text="@string/sign_me_up" />
</LinearLayout>