<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".questionActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:id="@+id/questionLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/it_seems_like_this_is_your_first_time_using_mentor_meet_welcome_please_answer_the_following_questions"
            android:id="@+id/welcomeQuestionsTextView"
            android:textAlignment="center"
            android:textColor="@color/grey" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/first_and_last_input"
            android:hint="@string/first_and_last_name" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/zipcode_edittext"
            android:layout_gravity="center_horizontal"
            android:hint="@string/zipcode" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/are_you_a_mentor"
                android:id="@+id/are_you_a_mentor" />

            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/switch_mentor"
                android:checked="false"
                android:textColor="@color/grey" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_choose_5_interests"
            android:id="@+id/interestTextView"
            android:textColor="@color/grey"
            android:paddingTop="15dp"
            android:textStyle="bold|italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/selectedInterestsTextView"
            android:text="You haven&apos;t selected any interests yet." />

        <ExpandableListView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/expandableListViewInterests"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1.37" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:id="@+id/btn_confirm_questions"
        android:layout_gravity="center_horizontal"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:background="@color/colorLightPrimary"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
